--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,6 +168,13 @@ nav a{
     height: 70px;
 }
 
+.web-main-explanations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -25px;
+}
+
 main h1 {
     font-style: var(--body-font-family);
     font-weight: 900;
@@ -412,7 +419,7 @@ footer .studio-word {
 
 .label-for-footer label input{
     height: 50px;
-    width: 91%;
+    width: 100%;
     background-color: rgba(33, 150, 243, 0);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -420,10 +427,15 @@ footer .studio-word {
     padding-left: 18px;
     outline: none;
     margin-left: 15px;
+    margin-right: 15px;
+    
 }
 
 .label-for-footer label {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .newslatter-subscribe p {
