--- a/CSS/style.css
+++ b/CSS/style.css
@@ -215,6 +215,17 @@ main h1 {
     width: 100%;
 }
 
+.our-team li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 270px;
+    height: 622px;
+    background-color: #fff;
+    box-shadow: 0px 2px 1px 0px #00000033;
+    border-radius: 0px 0px 4px 4px;
+}
+
 .our-team p {
     margin-top: -10px;
 }
@@ -229,16 +240,7 @@ main h1 {
 }
 
 
-.our-team li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 270px;
-    height: 428px;
-    background-color: #fff;
-    box-shadow: 0px 2px 1px 0px #00000033;
-    border-radius: 0px 0px 4px 4px;
-}
+
 
 .our-team svg{
     width: 20px ;
@@ -419,7 +421,7 @@ footer .studio-word {
 
 .label-for-footer label input{
     height: 50px;
-    width: 100%;
+    width: 450px;
     background-color: rgba(33, 150, 243, 0);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -432,7 +434,6 @@ footer .studio-word {
 }
 
 .label-for-footer label {
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -524,6 +525,14 @@ footer .studio-word {
         margin-left: 15px;
         margin-right: 15px;
         align-items: center;
+    }
+
+    .mobile-navigation-portofolio {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 60px;
     }
     
     .menu-bar { 
@@ -676,11 +685,11 @@ footer .studio-word {
    
     .main-div ul {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        margin: 0px auto;
-
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 30px;
+        padding: 0;
     }
 
     .main-div li {
@@ -704,8 +713,10 @@ footer .studio-word {
 
     .portofolio nav ul {
         display: flex;
-        margin-bottom: 50px;
-        margin-top: 0px;
+        width: 294px;
+        flex-wrap: wrap;
+        padding: 0;
+        row-gap:15px ;
     }
 
     .portofolio {
@@ -713,7 +724,8 @@ footer .studio-word {
         display:flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+        padding-top: 0px;
     }
 
     .portofolio button {
@@ -1114,6 +1126,11 @@ footer .studio-word {
             margin-top: 50px;
         }
 
+        .our-team li {
+            width: 270px;
+            height: 428px;
+        }
+
         .our-team-photos ul {
             display: flex;
             flex-direction: row;
@@ -1125,15 +1142,92 @@ footer .studio-word {
 
         .footer-container {
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
+            flex-direction: row;
             padding-left: 215px;
             align-items: center;
             height: 251px;
+            gap: 0;
+            padding-bottom: 0px;
+            padding-top: 0px;
         }
 
-        .label-for-footer {
+        .footer-adress-container {
+            direction: flex;
+            justify-content: flex-start;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 431px;
+        }
+
+        .footer-address {
             display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            gap: 0px;
         }
 
+
+        .newslatter-subscribe {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start; 
+         }
+
+         .label-for-footer label {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-start;
+          
+         }
+
+         .label-for-footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: baseline;
+         }
+
+         .label-for-footer label input{
+            width: 358px;
+            margin: 0;
+         }
+
+        .footer-social {
+        display: flex;
+        align-items:flex-start;
+        margin-top: -45px;
+        }
+
+        /* Portofolio */
+
+        .portofolio {
+            padding-bottom: 94px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .portofolio nav ul {
+            display: flex;
+            flex-direction: row;
+            width: 516px;
+            margin-bottom: 50px;
+            margin-top: 0px;
+            padding-left: 40px;
+            margin-top: 60px;
+        }
+
+        .main-div ul {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            margin: 0px auto;
+            flex-direction: row;
+        }
+
+        
     }
       
