--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1106,6 +1106,7 @@ footer .studio-word {
         gap:30px;
         margin-top: 300px;
         margin-bottom: 64px;
+        overflow: hidden;
       }
 
       .social-links-menu-modal {
