--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1030,7 +1030,7 @@ footer .studio-word {
         position: fixed;
         background-color: #fff;
         width: 100%;
-        height: 1000px;
+        height: 100vh;
         right: 0;
         top: 0;
       }
